--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "C:\\Python38\\python.exe"
+  "python.pythonPath": "C:\\Users\\DJYoo\\.virtualenvs\\airbnb-clone-61y2i2v_\\Scripts\\python.exe",
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": true,
+  "python.linting.enabled": true,
+  "python.formatting.provider": "black",
+  "python.linting.flake8Args": ["--max-line-length=88"],
+  "files.autoGuessEncoding": true
 }
